[package]
name = "rust-template-demo-bin-not-use-all"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
# Warning https://doc.rust-lang.org/cargo/reference/manifest.html#the-authors-field
#authors = ["uplau"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]

# See more at https://github.com/johnthagen/min-sized-rust
[profile.release]
#codegen-units = 1
lto = true
opt-level = "s"
strip = true

